--- a/src/css/index.css
+++ b/src/css/index.css
@@ -59,6 +59,31 @@
 }
 
 @tailwind components;
+
+.primary-btn {
+  @apply inline-flex text-white bg-brand-red-500 border-0 py-1 px-6 rounded-md font-extrabold text-sm;
+}
+
+.primary-btn:hover {
+  @apply bg-brand-red-400;
+}
+
+.callout-card {
+  @apply my-2 mx-4 w-full overflow-hidden bg-white p-5 shadow-xl rounded-lg flex justify-start items-center;
+}
+
+@screen md {
+  .callout-card {
+    @apply w-1/2;
+  }
+}
+
+@screen lg {
+  .callout-card {
+    @apply w-1/3;
+  }
+}
+
 @tailwind utilities;
 /*! purgecss end ignore */
 @tailwind utilities;
