--- a/src/css/index.css
+++ b/src/css/index.css
@@ -60,6 +60,14 @@
 
 @tailwind components;
 
+.hero {
+  @apply relative overflow-hidden;
+}
+
+.content-container {
+  @apply mx-auto w-full;
+}
+
 .primary-btn {
   @apply inline-flex text-white bg-brand-red-500 border-0 py-1 px-6 rounded-md font-extrabold text-sm;
 }
@@ -69,18 +77,29 @@
 }
 
 .callout-card {
-  @apply my-2 mr-2 w-full overflow-hidden bg-white p-4 shadow-xl rounded-lg flex justify-start items-center;
+  @apply w-full overflow-hidden bg-white p-4 shadow-lg flex flex-row justify-start items-center transition-all duration-300 ease-out;
 }
 
-@screen md {
-  .callout-card {
-    @apply w-1/3;
+.callout-card:hover {
+  @apply  -mt-8;
+}
+
+@screen sm {
+  .content-container {
+    @apply rounded-lg px-6;
   }
 }
 
 @screen lg {
-  .callout-card {
-    @apply w-1/3;
+  .hero {
+    @apply relative bg-no-repeat bg-cover overflow-hidden h-screen;
+    background-image: url("../images/heroBG.jpg");
+  }
+}
+
+@screen lg {
+  .content-container {
+    @apply px-8;
   }
 }
 
