--- a/src/css/index.css
+++ b/src/css/index.css
@@ -69,7 +69,7 @@
 }
 
 .primary-btn {
-  @apply inline-flex text-white bg-brand-red-500 border-0 py-1 px-6 rounded-md font-extrabold text-sm;
+  @apply inline-flex text-white bg-brand-red-500 border-0 py-1 px-6 rounded-lg font-extrabold text-sm;
 }
 
 .primary-btn:hover {
@@ -77,7 +77,7 @@
 }
 
 .callout-card {
-  @apply w-full overflow-hidden bg-white p-4 shadow-lg flex flex-row justify-start items-center transition-all duration-300 ease-out;
+  @apply w-full rounded overflow-hidden bg-white p-4 shadow-lg flex flex-row justify-start items-center transition-all duration-300 ease-out;
 }
 
 .callout-card:hover {
@@ -86,7 +86,7 @@
 
 @screen sm {
   .content-container {
-    @apply rounded-lg px-6;
+    @apply rounded px-6;
   }
 }
 
