--- a/src/css/index.css
+++ b/src/css/index.css
@@ -115,6 +115,17 @@
   }
 }
 
-@tailwind utilities;
 /*! purgecss end ignore */
 @tailwind utilities;
+
+@keyframes float {
+  0% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(-20px);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
