--- a/src/css/index.css
+++ b/src/css/index.css
@@ -60,6 +60,55 @@
 
 @tailwind components;
 
+.timeline {
+  @apply relative;
+}
+.timeline::after {
+  @apply absolute bg-gray-900 top-0 bottom-0 left-0 -ml-3;
+  content: '';
+  width: 2px;
+}
+.timeline-circle {
+  @apply p-4 relative bg-transparent;
+}
+.timeline-circle::after {
+  @apply absolute w-10 h-10 bg-transparent border rounded-full z-50 border-gray-900 font-display font-extrabold flex justify-center items-center;
+  content: '01';
+  top: 15px;
+}
+.timeline-circle-2 {
+  @apply p-4 relative bg-transparent;
+}
+.timeline-circle-2::after {
+  @apply absolute w-10 h-10 bg-transparent border rounded-full z-50 border-gray-900 font-display font-extrabold flex justify-center items-center;
+  content: '02';
+  top: 35px;
+}
+.timeline-circle-3 {
+  @apply p-4 relative bg-transparent;
+}
+.timeline-circle-3::after {
+  @apply absolute w-10 h-10 bg-transparent border rounded-full z-50 border-gray-900 font-display font-extrabold flex justify-center items-center;
+  content: '03';
+  top: 55px;
+}
+.timeline-circle-4 {
+  @apply p-4 relative bg-transparent;
+}
+.timeline-circle-4::after {
+  @apply absolute w-10 h-10 bg-transparent border rounded-full z-50 border-gray-900 font-display font-extrabold flex justify-center items-center;
+  content: '04';
+  top: 75px;
+}
+.timeline-circle-5 {
+  @apply p-4 relative bg-transparent;
+}
+.timeline-circle-5::after {
+  @apply absolute w-10 h-10 bg-transparent border rounded-full z-50 border-gray-900 font-display font-extrabold flex justify-center items-center;
+  content: '05';
+  top: 95px;
+}
+
 .purple-blob-bg {  }
 .yellow-blob-bg {  }
 .green-blob-bg {  }
