--- a/src/css/index.css
+++ b/src/css/index.css
@@ -150,6 +150,10 @@
   background: linear-gradient(180deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 40%, rgba(247,247,247,1) 41%, rgba(247,247,247,1) 100%);
 }
 
+.services-bg {
+  background: linear-gradient(180deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 35%, rgba(247,247,247,1) 36%, rgba(247,247,247,1) 57%, rgba(255,255,255,1) 58%);
+}
+
 @screen sm {
   .content-container {
     @apply rounded px-6;
@@ -177,6 +181,12 @@
     background: url('../images/purple-blob.svg') 130% -10% no-repeat,linear-gradient(180deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 50%, rgba(247,247,247,1) 51%, rgba(247,247,247,1) 100%);
     background-size: 50% 50%, auto auto;
   }
+
+  .services-bg {
+    background: url('../components/svg/blue-blob.svg') 150% -25% no-repeat, url('../images/yellow-blob-bg.svg') -60% 25% no-repeat, linear-gradient(180deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 35%, rgba(247,247,247,1) 36%, rgba(247,247,247,1) 57%, rgba(255,255,255,1) 58%);
+    background-size: 50% 50%, 50% 50%, auto auto;
+  }
+
   .hero {
     @apply relative bg-no-repeat bg-cover overflow-hidden h-screen;
     background-image: url("../images/heroBG.jpg");
