--- a/src/css/index.css
+++ b/src/css/index.css
@@ -64,55 +64,6 @@
   display: none;
 }
 
-.timeline {
-  @apply relative;
-}
-.timeline::after {
-  @apply absolute bg-gray-900 top-0 bottom-0 left-0 -ml-3;
-  content: '';
-  width: 2px;
-}
-.timeline-circle {
-  @apply p-4 relative bg-transparent;
-}
-.timeline-circle::after {
-  @apply absolute w-10 h-10 bg-transparent border rounded-full z-50 border-gray-900 font-display font-extrabold flex justify-center items-center;
-  content: '01';
-  top: 15px;
-}
-.timeline-circle-2 {
-  @apply p-4 relative bg-transparent;
-}
-.timeline-circle-2::after {
-  @apply absolute w-10 h-10 bg-transparent border rounded-full z-50 border-gray-900 font-display font-extrabold flex justify-center items-center;
-  content: '02';
-  top: 35px;
-}
-.timeline-circle-3 {
-  @apply p-4 relative bg-transparent;
-}
-.timeline-circle-3::after {
-  @apply absolute w-10 h-10 bg-transparent border rounded-full z-50 border-gray-900 font-display font-extrabold flex justify-center items-center;
-  content: '03';
-  top: 55px;
-}
-.timeline-circle-4 {
-  @apply p-4 relative bg-transparent;
-}
-.timeline-circle-4::after {
-  @apply absolute w-10 h-10 bg-transparent border rounded-full z-50 border-gray-900 font-display font-extrabold flex justify-center items-center;
-  content: '04';
-  top: 75px;
-}
-.timeline-circle-5 {
-  @apply p-4 relative bg-transparent;
-}
-.timeline-circle-5::after {
-  @apply absolute w-10 h-10 bg-transparent border rounded-full z-50 border-gray-900 font-display font-extrabold flex justify-center items-center;
-  content: '05';
-  top: 95px;
-}
-
 .purple-blob-bg {  }
 .yellow-blob-bg {  }
 .green-blob-bg {  }
@@ -140,6 +91,27 @@
 
 .callout-card {
   @apply mb-8 w-full rounded overflow-hidden bg-white p-4 shadow-brand flex flex-row justify-start items-center transition-all duration-300 ease-out;
+}
+
+.info-timeline ul li span.timeline-circle {
+  @apply font-display relative border-2 font-extrabold bg-transparent inline-block text-center border-gray-900 text-lg;
+  border-radius: 100%;
+  width: 40px;
+  line-height: 40px;
+  text-align: center;
+  margin-top: 40px;
+  z-index: 2;
+}
+
+.info-timeline ul li:not(:first-of-type) span.timeline-circle::before {
+  @apply absolute border block border-gray-900;
+  width: 0;
+  height: 40px;
+  content: '';
+  left: 50%;
+  z-index: 1;
+  top: -42px;
+  margin-left: -1px;
 }
 
 .home-contact-bg {
