--- a/src/css/index.css
+++ b/src/css/index.css
@@ -126,6 +126,10 @@
   background: linear-gradient(180deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 35%, rgba(247,247,247,1) 36%, rgba(247,247,247,1) 57%, rgba(255,255,255,1) 58%);
 }
 
+.services-office-bg {
+  background: transparent;
+}
+
 @screen sm {
   .content-container {
     @apply rounded px-6;
@@ -157,6 +161,11 @@
   .services-bg {
     background: url('../components/svg/blue-blob.svg') 150% -25% no-repeat, url('../images/yellow-blob-bg.svg') -60% 25% no-repeat, linear-gradient(180deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 35%, rgba(247,247,247,1) 36%, rgba(247,247,247,1) 57%, rgba(255,255,255,1) 58%);
     background-size: 50% 50%, 50% 50%, auto auto;
+  }
+
+  .services-office-bg {
+    background: url('../images/office.png') 110% 10% no-repeat, transparent;
+    background-size: 60%;
   }
 
   .hero {
