--- a/src/css/index.css
+++ b/src/css/index.css
@@ -6,6 +6,7 @@
   font-family: 'Roboto Slab';
   font-style: normal;
   font-weight: 400;
+  font-display: swap;
   src: local(''),
        url('../fonts/roboto-slab-v12-latin-ext_latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
        url('../fonts/roboto-slab-v12-latin-ext_latin-regular.woff') format('woff'), /* Modern Browsers */
@@ -17,6 +18,7 @@
   font-family: 'Roboto Slab';
   font-style: normal;
   font-weight: 800;
+  font-display: swap;
   src: local(''),
        url('../fonts/roboto-slab-v12-latin-ext_latin-800.woff2') format('woff2'), /* Super Modern Browsers */
        url('../fonts/roboto-slab-v12-latin-ext_latin-800.woff') format('woff'), /* Modern Browsers */
@@ -29,6 +31,7 @@
   font-family: 'Poppins';
   font-style: normal;
   font-weight: 300;
+  font-display: swap;
   src: local('Poppins Light'), local('Poppins-Light'),
        url('../fonts/poppins-v9-latin-ext_latin-300.woff2') format('woff2'), /* Super Modern Browsers */
        url('../fonts/poppins-v9-latin-ext_latin-300.woff') format('woff'), /* Modern Browsers */
@@ -40,6 +43,7 @@
   font-family: 'Poppins';
   font-style: normal;
   font-weight: 400;
+  font-display: swap;
   src: local('Poppins Regular'), local('Poppins-Regular'),
        url('../fonts/poppins-v9-latin-ext_latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
        url('../fonts/poppins-v9-latin-ext_latin-regular.woff') format('woff'), /* Modern Browsers */
@@ -51,6 +55,7 @@
   font-family: 'Poppins';
   font-style: normal;
   font-weight: 800;
+  font-display: swap;
   src: local('Poppins ExtraBold'), local('Poppins-ExtraBold'),
        url('../fonts/poppins-v9-latin-ext_latin-800.woff2') format('woff2'), /* Super Modern Browsers */
        url('../fonts/poppins-v9-latin-ext_latin-800.woff') format('woff'), /* Modern Browsers */
