--- a/src/css/index.css
+++ b/src/css/index.css
@@ -8,10 +8,10 @@
   font-weight: 300;
   font-display: swap;
   src: local('Poppins Light'), local('Poppins-Light'),
-       url('../fonts/poppins-v9-latin-ext_latin-300.woff2') format('woff2'), /* Super Modern Browsers */
-       url('../fonts/poppins-v9-latin-ext_latin-300.woff') format('woff'), /* Modern Browsers */
-       url('../fonts/poppins-v9-latin-ext_latin-300.ttf') format('truetype'), /* Safari, Android, iOS */
-       url('../fonts/poppins-v9-latin-ext_latin-300.svg#Poppins') format('svg'); /* Legacy iOS */
+    url('../fonts/poppins-v9-latin-ext_latin-300.woff2') format('woff2'),
+    /* Super Modern Browsers */ url('../fonts/poppins-v9-latin-ext_latin-300.woff') format('woff'),
+    /* Modern Browsers */ url('../fonts/poppins-v9-latin-ext_latin-300.ttf') format('truetype'),
+    /* Safari, Android, iOS */ url('../fonts/poppins-v9-latin-ext_latin-300.svg#Poppins') format('svg'); /* Legacy iOS */
 }
 /* poppins-regular - latin-ext_latin */
 @font-face {
@@ -20,10 +20,10 @@
   font-weight: 400;
   font-display: swap;
   src: local('Poppins Regular'), local('Poppins-Regular'),
-       url('../fonts/poppins-v9-latin-ext_latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
-       url('../fonts/poppins-v9-latin-ext_latin-regular.woff') format('woff'), /* Modern Browsers */
-       url('../fonts/poppins-v9-latin-ext_latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
-       url('../fonts/poppins-v9-latin-ext_latin-regular.svg#Poppins') format('svg'); /* Legacy iOS */
+    url('../fonts/poppins-v9-latin-ext_latin-regular.woff2') format('woff2'),
+    /* Super Modern Browsers */ url('../fonts/poppins-v9-latin-ext_latin-regular.woff') format('woff'),
+    /* Modern Browsers */ url('../fonts/poppins-v9-latin-ext_latin-regular.ttf') format('truetype'),
+    /* Safari, Android, iOS */ url('../fonts/poppins-v9-latin-ext_latin-regular.svg#Poppins') format('svg'); /* Legacy iOS */
 }
 /* poppins-800 - latin-ext_latin */
 @font-face {
@@ -32,10 +32,26 @@
   font-weight: 800;
   font-display: swap;
   src: local('Poppins ExtraBold'), local('Poppins-ExtraBold'),
-       url('../fonts/poppins-v9-latin-ext_latin-800.woff2') format('woff2'), /* Super Modern Browsers */
-       url('../fonts/poppins-v9-latin-ext_latin-800.woff') format('woff'), /* Modern Browsers */
-       url('../fonts/poppins-v9-latin-ext_latin-800.ttf') format('truetype'), /* Safari, Android, iOS */
-       url('../fonts/poppins-v9-latin-ext_latin-800.svg#Poppins') format('svg'); /* Legacy iOS */
+    url('../fonts/poppins-v9-latin-ext_latin-800.woff2') format('woff2'),
+    /* Super Modern Browsers */ url('../fonts/poppins-v9-latin-ext_latin-800.woff') format('woff'),
+    /* Modern Browsers */ url('../fonts/poppins-v9-latin-ext_latin-800.ttf') format('truetype'),
+    /* Safari, Android, iOS */ url('../fonts/poppins-v9-latin-ext_latin-800.svg#Poppins') format('svg'); /* Legacy iOS */
+}
+/* sofiapro-300 */
+@font-face {
+  font-family: 'Sofia-Pro';
+  font-style: normal;
+  font-weight: 300;
+  font-display: swap;
+  src: local('SofiaPro Light'), local('SofiaPro-Light'), url('../fonts/Sofia\ Pro\ Light\ Az.otf');
+}
+/* sofiapro-800 */
+@font-face {
+  font-family: 'Sofia-Pro';
+  font-style: normal;
+  font-weight: 800;
+  font-display: swap;
+  src: local('SofiaPro Black'), local('SofiaPro-Black'), url('../fonts/Sofia\ Pro\ Black\ Az.otf');
 }
 
 @tailwind components;
@@ -44,10 +60,14 @@
   display: none;
 }
 
-.purple-blob-bg {  }
-.yellow-blob-bg {  }
-.green-blob-bg {  }
-.multi-blob-bg {  }
+.purple-blob-bg {
+}
+.yellow-blob-bg {
+}
+.green-blob-bg {
+}
+.multi-blob-bg {
+}
 
 .heading {
   @apply mb-8 text-2xl font-extrabold font-display;
@@ -73,17 +93,35 @@
   @apply mb-8 w-full rounded overflow-hidden bg-white p-4 shadow-brand flex flex-row justify-start items-center transition-all duration-300 ease-out;
 }
 
-
 .home-contact-bg {
-  background: linear-gradient(180deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 60%, rgba(247,247,247,1) 61%, rgba(247,247,247,1) 100%);
+  background: linear-gradient(
+    180deg,
+    rgba(255, 255, 255, 1) 0%,
+    rgba(255, 255, 255, 1) 60%,
+    rgba(247, 247, 247, 1) 61%,
+    rgba(247, 247, 247, 1) 100%
+  );
 }
 
 .portfolio-bg {
-  background: linear-gradient(180deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 40%, rgba(247,247,247,1) 41%, rgba(247,247,247,1) 100%);
+  background: linear-gradient(
+    180deg,
+    rgba(255, 255, 255, 1) 0%,
+    rgba(255, 255, 255, 1) 40%,
+    rgba(247, 247, 247, 1) 41%,
+    rgba(247, 247, 247, 1) 100%
+  );
 }
 
 .services-bg {
-  background: linear-gradient(180deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 35%, rgba(247,247,247,1) 36%, rgba(247,247,247,1) 57%, rgba(255,255,255,1) 58%);
+  background: linear-gradient(
+    180deg,
+    rgba(255, 255, 255, 1) 0%,
+    rgba(255, 255, 255, 1) 35%,
+    rgba(247, 247, 247, 1) 36%,
+    rgba(247, 247, 247, 1) 57%,
+    rgba(255, 255, 255, 1) 58%
+  );
 }
 
 .services-office-bg {
@@ -110,16 +148,39 @@
 
 @screen lg {
   .home-contact-bg {
-    background: url('../images/purple-blob.svg') 120% top no-repeat,linear-gradient(180deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 60%, rgba(247,247,247,1) 61%, rgba(247,247,247,1) 100%);
+    background: url('../images/purple-blob.svg') 120% top no-repeat,
+      linear-gradient(
+        180deg,
+        rgba(255, 255, 255, 1) 0%,
+        rgba(255, 255, 255, 1) 60%,
+        rgba(247, 247, 247, 1) 61%,
+        rgba(247, 247, 247, 1) 100%
+      );
   }
 
   .portfolio-bg {
-    background: url('../images/purple-blob.svg') 130% -10% no-repeat,linear-gradient(180deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 50%, rgba(247,247,247,1) 51%, rgba(247,247,247,1) 100%);
+    background: url('../images/purple-blob.svg') 130% -10% no-repeat,
+      linear-gradient(
+        180deg,
+        rgba(255, 255, 255, 1) 0%,
+        rgba(255, 255, 255, 1) 50%,
+        rgba(247, 247, 247, 1) 51%,
+        rgba(247, 247, 247, 1) 100%
+      );
     background-size: 50% 50%, auto auto;
   }
 
   .services-bg {
-    background: url('../components/svg/blue-blob.svg') 150% -25% no-repeat, url('../images/yellow-blob-bg.svg') -60% 25% no-repeat, linear-gradient(180deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 35%, rgba(247,247,247,1) 36%, rgba(247,247,247,1) 57%, rgba(255,255,255,1) 58%);
+    background: url('../components/svg/blue-blob.svg') 150% -25% no-repeat,
+      url('../images/yellow-blob-bg.svg') -60% 25% no-repeat,
+      linear-gradient(
+        180deg,
+        rgba(255, 255, 255, 1) 0%,
+        rgba(255, 255, 255, 1) 35%,
+        rgba(247, 247, 247, 1) 36%,
+        rgba(247, 247, 247, 1) 57%,
+        rgba(255, 255, 255, 1) 58%
+      );
     background-size: 50% 50%, 50% 50%, auto auto;
   }
 
@@ -130,7 +191,7 @@
 
   .hero {
     @apply relative bg-no-repeat bg-cover overflow-hidden h-screen;
-    background-image: url("../images/heroBG.jpg");
+    background-image: url('../images/heroBG.jpg');
   }
   .purple-blob-bg {
     @apply bg-no-repeat;
